--- a/src/app/pages/user-management/admin-principal/edit/admin-principal-edit.component.scss
+++ b/src/app/pages/user-management/admin-principal/edit/admin-principal-edit.component.scss
@@ -2,6 +2,12 @@
   .btn-confirm {
     margin: 10px 0;
   }
+
+  .wilayah {
+    background: #3a3a3a;
+    color: white;
+    padding: 0 24px;
+  }
 }
 
 :host /deep/ .mat-input-element:disabled {
