--- a/src/app/pages/dte/schedule-program/import-coin/import-coin.component.html
+++ b/src/app/pages/dte/schedule-program/import-coin/import-coin.component.html
@@ -18,8 +18,9 @@
   </mat-toolbar>
 
   <div mat-dialog-content class="p-24 m-0" fusePerfectScrollbar>
-    <div ngfDrop selectable="1" class="rectangle-16" [(validDrag)]="validComboDrag" [(file)]="files" accept=".xls"
-      [class.invalid-drag]="validComboDrag===false" [class.valid-drag]="validComboDrag" (fileChange)="preview($event)">
+    <div ngfDrop selectable="1" class="rectangle-16" [(validDrag)]="validComboDrag" [(file)]="files"
+      accept=".xlsx, .xls" [class.invalid-drag]="validComboDrag===false" [class.valid-drag]="validComboDrag"
+      (fileChange)="preview($event)">
       <div class="p-24" fxLayout="column" fxLayoutAlign="center center">
         <mat-icon class="secondary-text s-48">attach_file</mat-icon>
         <br>
@@ -42,10 +43,12 @@
             <th nowrap>Status Retailer</th>
             <th nowrap>Current Coin</th>
             <th nowrap>Coin Adjusted</th>
+            <th nowrap>Alasan</th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let item of rows">
+          <tr *ngFor="let item of rows"
+            [ngStyle]="{ 'background-color': setRedIfDuplicate(item), color: item.flag === 'duplicate' ? 'white' : 'black' }">
             <td nowrap>
               {{ item.trade_program_name }}
             </td>
@@ -63,6 +66,9 @@
             </td>
             <td nowrap>
               {{ item.coin }}
+            </td>
+            <td nowrap>
+              {{ item.flag_reason }}
             </td>
           </tr>
           <tr *ngIf="rows.length === 0">
@@ -85,7 +91,7 @@
       <div fxFlexLayout="row" fxLayoutAlign="start center" fxLayout.lt-md="row" fxLayoutGap="20px"
         fxLayoutGap.lt-md="10px" fxFlex="1 0 auto">
         <button type="button" mat-raised-button color="primary" (click)="submit()"
-          [disabled]="!files || rows.length === 0">Kirim</button>
+          [disabled]="!files || rows.length === 0 || !isValid">Kirim</button>
         <button type="button" mat-stroked-button color="primary" (click)="dialogRef.close()"
           [disabled]="uploading">Batal</button>
       </div>
