--- a/src/app/pages/dte/schedule-program/import-coin/import-coin.component.html
+++ b/src/app/pages/dte/schedule-program/import-coin/import-coin.component.html
@@ -43,12 +43,10 @@
             <th nowrap>Status Retailer</th>
             <th nowrap>Current Coin</th>
             <th nowrap>Coin Adjusted</th>
-            <th nowrap>Alasan</th>
           </tr>
         </thead>
         <tbody>
-          <tr *ngFor="let item of rows"
-            [ngStyle]="{ 'background-color': setRedIfDuplicate(item), color: item.flag === 'duplicate' ? 'white' : 'black' }">
+          <tr *ngFor="let item of rows">
             <td nowrap>
               {{ item.trade_program_name }}
             </td>
@@ -66,9 +64,6 @@
             </td>
             <td nowrap>
               {{ item.coin }}
-            </td>
-            <td nowrap>
-              {{ item.flag_reason }}
             </td>
           </tr>
           <tr *ngIf="rows.length === 0">
@@ -91,7 +86,7 @@
       <div fxFlexLayout="row" fxLayoutAlign="start center" fxLayout.lt-md="row" fxLayoutGap="20px"
         fxLayoutGap.lt-md="10px" fxFlex="1 0 auto">
         <button type="button" mat-raised-button color="primary" (click)="submit()"
-          [disabled]="!files || rows.length === 0 || !isValid">Kirim</button>
+          [disabled]="!files || rows.length === 0">Kirim</button>
         <button type="button" mat-stroked-button color="primary" (click)="dialogRef.close()"
           [disabled]="uploading">Batal</button>
       </div>
