add id to every select tag in Area 1 & 2

--- a/src/app/pages/user-management/admin-principal/edit/admin-principal-edit.component.html
+++ b/src/app/pages/user-management/admin-principal/edit/admin-principal-edit.component.html
@@ -78,14 +78,14 @@
               fxLayoutGap.lt-md="0px" fxLayoutAlign="space-between stretch">
               <mat-form-field fxFlex="31%" class="is-light form-primary">
                 <mat-select placeholder="National" formControlName="national"
-                  matTooltip="{{getToolTipData(formAdmin.get('national').value, listLevelArea)}}">
+                  matTooltip="{{getToolTipData(formAdmin.get('national').value, listLevelArea)}}" id="area1_national">
                   <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
                 <mat-select placeholder="Zone" formControlName="zone"
                   matTooltip="{{getToolTipData(formAdmin.get('zone').value, list['zone'])}}"
-                  (selectionChange)="getAudienceArea('region', formAdmin.get('zone').value)">
+                  (selectionChange)="getAudienceArea('region', formAdmin.get('zone').value)" id="area1_zone">
                   <mat-option *ngFor="let item of list['zone']" [value]="item.id">
                     {{item.name === 'all' ? 'Semua Zona' : item.name}}</mat-option>
                 </mat-select>
@@ -93,7 +93,7 @@
               <mat-form-field fxFlex="31%" class="is-light form-primary">
                 <mat-select placeholder="Regional" formControlName="region"
                   matTooltip="{{getToolTipData(formAdmin.get('region').value, list['region'])}}"
-                  (selectionChange)="getAudienceArea('area', formAdmin.get('region').value)">
+                  (selectionChange)="getAudienceArea('area', formAdmin.get('region').value)" id="area1_region">
                   <mat-option *ngFor="let item of list['region']" [value]="item.id">
                     {{item.name === 'all' ? 'Semua Regional' : item.name}}</mat-option>
                 </mat-select>
@@ -101,7 +101,7 @@
               <mat-form-field fxFlex="31%" class="is-light form-primary">
                 <mat-select placeholder="Area" formControlName="area"
                   matTooltip="{{getToolTipData(formAdmin.get('area').value, list['area'])}}"
-                  (selectionChange)="getAudienceArea('salespoint', formAdmin.get('area').value)">
+                  (selectionChange)="getAudienceArea('salespoint', formAdmin.get('area').value)" id="area1_area">
                   <mat-option *ngFor="let item of list['area']" [value]="item.id">
                     {{item.name === 'all' ? 'Semua Area' : item.name}}</mat-option>
                 </mat-select>
@@ -109,7 +109,8 @@
               <mat-form-field fxFlex="31%" class="is-light form-primary">
                 <mat-select placeholder="Salespoint" formControlName="salespoint"
                   matTooltip="{{getToolTipData(formAdmin.get('salespoint').value, list['salespoint'])}}"
-                  (selectionChange)="getAudienceArea('district', formAdmin.get('salespoint').value)">
+                  (selectionChange)="getAudienceArea('district', formAdmin.get('salespoint').value)"
+                  id="area1_salespoint">
                   <mat-option *ngFor="let item of list['salespoint']" [value]="item.id">
                     {{item.name === 'all' ? 'Semua Salespoint' : item.name}}</mat-option>
                 </mat-select>
@@ -117,14 +118,15 @@
               <mat-form-field fxFlex="31%" class="is-light form-primary">
                 <mat-select placeholder="District" formControlName="district"
                   matTooltip="{{getToolTipData(formAdmin.get('district').value, list['district'])}}"
-                  (selectionChange)="getAudienceArea('territory', formAdmin.get('district').value)">
+                  (selectionChange)="getAudienceArea('territory', formAdmin.get('district').value)" id="area1_district">
                   <mat-option *ngFor="let item of list['district']" [value]="item.id">
                     {{item.name === 'all' ? 'Semua District' : item.name}}</mat-option>
                 </mat-select>
               </mat-form-field>
               <mat-form-field fxFlex="31%" class="is-light form-primary">
                 <mat-select placeholder="Territory" formControlName="territory"
-                  matTooltip="{{getToolTipData(formAdmin.get('territory').value, list['territory'])}}">
+                  matTooltip="{{getToolTipData(formAdmin.get('territory').value, list['territory'])}}"
+                  id="area1_territory">
                   <mat-option *ngFor="let item of list['territory']" [value]="item.id">
                     {{item.name === 'all' ? 'Semua Territory' : item.name}}</mat-option>
                 </mat-select>
@@ -158,14 +160,14 @@
                 fxLayoutGap.lt-md="0px" fxLayoutAlign="space-between stretch">
                 <mat-form-field fxFlex="31%" class="is-light form-primary">
                   <mat-select placeholder="National" formControlName="national"
-                    matTooltip="{{getToolTipData(formArea2.get('national').value, listLevelArea)}}">
+                    matTooltip="{{getToolTipData(formArea2.get('national').value, listLevelArea)}}" id="area2_national">
                     <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="31%" class="is-light form-primary">
                   <mat-select placeholder="Zone" formControlName="zone"
                     matTooltip="{{getToolTipData(formArea2.get('zone').value, list2['zone'])}}"
-                    (selectionChange)="getAudienceArea2('region', formArea2.get('zone').value)">
+                    (selectionChange)="getAudienceArea2('region', formArea2.get('zone').value)" id="area2_zone">
                     <mat-option *ngFor="let item of list2['zone']" [value]="item.id">
                       {{item.name === 'all' ? 'Semua Zona' : item.name}}</mat-option>
                   </mat-select>
@@ -173,7 +175,7 @@
                 <mat-form-field fxFlex="31%" class="is-light form-primary">
                   <mat-select placeholder="Regional" formControlName="region"
                     matTooltip="{{getToolTipData(formArea2.get('region').value, list2['region'])}}"
-                    (selectionChange)="getAudienceArea2('area', formArea2.get('region').value)">
+                    (selectionChange)="getAudienceArea2('area', formArea2.get('region').value)" id="area2_region">
                     <mat-option *ngFor="let item of list2['region']" [value]="item.id">
                       {{item.name === 'all' ? 'Semua Regional' : item.name}}</mat-option>
                   </mat-select>
@@ -181,7 +183,7 @@
                 <mat-form-field fxFlex="31%" class="is-light form-primary">
                   <mat-select placeholder="Area" formControlName="area"
                     matTooltip="{{getToolTipData(formArea2.get('area').value, list2['area'])}}"
-                    (selectionChange)="getAudienceArea2('salespoint', formArea2.get('area').value)">
+                    (selectionChange)="getAudienceArea2('salespoint', formArea2.get('area').value)" id="area2_area">
                     <mat-option *ngFor="let item of list2['area']" [value]="item.id">
                       {{item.name === 'all' ? 'Semua Area' : item.name}}</mat-option>
                   </mat-select>
@@ -189,7 +191,8 @@
                 <mat-form-field fxFlex="31%" class="is-light form-primary">
                   <mat-select placeholder="Salespoint" formControlName="salespoint"
                     matTooltip="{{getToolTipData(formArea2.get('salespoint').value, list2['salespoint'])}}"
-                    (selectionChange)="getAudienceArea2('district', formArea2.get('salespoint').value)">
+                    (selectionChange)="getAudienceArea2('district', formArea2.get('salespoint').value)"
+                    id="area2_salespoint">
                     <mat-option *ngFor="let item of list2['salespoint']" [value]="item.id">
                       {{item.name === 'all' ? 'Semua Salespoint' : item.name}}</mat-option>
                   </mat-select>
@@ -197,14 +200,16 @@
                 <mat-form-field fxFlex="31%" class="is-light form-primary">
                   <mat-select placeholder="District" formControlName="district"
                     matTooltip="{{getToolTipData(formArea2.get('district').value, list2['district'])}}"
-                    (selectionChange)="getAudienceArea2('territory', formArea2.get('district').value)">
+                    (selectionChange)="getAudienceArea2('territory', formArea2.get('district').value)"
+                    id="area2_district">
                     <mat-option *ngFor="let item of list2['district']" [value]="item.id">
                       {{item.name === 'all' ? 'Semua District' : item.name}}</mat-option>
                   </mat-select>
                 </mat-form-field>
                 <mat-form-field fxFlex="31%" class="is-light form-primary">
                   <mat-select placeholder="Territory" formControlName="territory"
-                    matTooltip="{{getToolTipData(formArea2.get('territory').value, list2['territory'])}}">
+                    matTooltip="{{getToolTipData(formArea2.get('territory').value, list2['territory'])}}"
+                    id="area2_territory">
                     <mat-option *ngFor="let item of list2['territory']" [value]="item.id">
                       {{item.name === 'all' ? 'Semua Territory' : item.name}}</mat-option>
                   </mat-select>
