--- a/src/app/pages/user-management/admin-principal/create/admin-principal-create.component.html
+++ b/src/app/pages/user-management/admin-principal/create/admin-principal-create.component.html
@@ -59,7 +59,7 @@
 
             <div fxFlex="1 0 auto" fxLayout="column">
               <mat-form-field fxFlex="100" class="is-light form-primary">
-                <mat-select placeholder="National" formControlName="national">
+                <mat-select placeholder="National" formControlName="national" id="area1_national">
                   <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
                 <mat-error
@@ -69,7 +69,7 @@
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light form-primary">
                 <mat-select placeholder="Zone" formControlName="zone"
-                  (selectionChange)="getAudienceArea('region', wilayah.get('zone').value)">
+                  (selectionChange)="getAudienceArea('region', wilayah.get('zone').value)" id="area1_zone">
                   <mat-option *ngFor="let item of list['zone']" [value]="item.id">
                     {{item.name === 'all' ? 'Semua Zona' : item.name}}</mat-option>
                 </mat-select>
@@ -79,7 +79,7 @@
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light form-primary">
                 <mat-select placeholder="Regional" formControlName="region"
-                  (selectionChange)="getAudienceArea('area', wilayah.get('region').value)">
+                  (selectionChange)="getAudienceArea('area', wilayah.get('region').value)" id="area1_region">
                   <mat-option *ngFor="let item of list['region']" [value]="item.id">
                     {{item.name === 'all' ? 'Semua Regional' : item.name}}</mat-option>
                 </mat-select>
@@ -90,7 +90,7 @@
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light form-primary">
                 <mat-select placeholder="Area" formControlName="area"
-                  (selectionChange)="getAudienceArea('salespoint', wilayah.get('area').value)">
+                  (selectionChange)="getAudienceArea('salespoint', wilayah.get('area').value)" id="area1_area">
                   <mat-option *ngFor="let item of list['area']" [value]="item.id">
                     {{item.name === 'all' ? 'Semua Area' : item.name}}</mat-option>
                 </mat-select>
@@ -100,7 +100,8 @@
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light form-primary">
                 <mat-select placeholder="Salespoint" formControlName="salespoint"
-                  (selectionChange)="getAudienceArea('district', wilayah.get('salespoint').value)">
+                  (selectionChange)="getAudienceArea('district', wilayah.get('salespoint').value)"
+                  id="area1_salespoint">
                   <mat-option *ngFor="let item of list['salespoint']" [value]="item.id">
                     {{item.name === 'all' ? 'Semua Salespoint' : item.name}}</mat-option>
                 </mat-select>
@@ -111,7 +112,7 @@
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light form-primary">
                 <mat-select placeholder="District" formControlName="district"
-                  (selectionChange)="getAudienceArea('territory', wilayah.get('district').value)">
+                  (selectionChange)="getAudienceArea('territory', wilayah.get('district').value)" id="area1_district">
                   <mat-option *ngFor="let item of list['district']" [value]="item.id">
                     {{item.name === 'all' ? 'Semua District' : item.name}}</mat-option>
                 </mat-select>
@@ -121,7 +122,7 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light form-primary">
-                <mat-select placeholder="Territory" formControlName="territory">
+                <mat-select placeholder="Territory" formControlName="territory" id="area1_territory">
                   <mat-option *ngFor="let item of list['territory']" [value]="item.id">
                     {{item.name === 'all' ? 'Semua Territory' : item.name}}</mat-option>
                 </mat-select>
@@ -147,7 +148,7 @@
 
             <div fxFlex="1 0 auto" fxLayout="column">
               <mat-form-field fxFlex="100" class="is-light form-primary">
-                <mat-select placeholder="National" formControlName="national">
+                <mat-select placeholder="National" formControlName="national" id="area2_national">
                   <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
                 </mat-select>
                 <mat-error
@@ -157,7 +158,7 @@
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light form-primary">
                 <mat-select placeholder="Zone" formControlName="zone"
-                  (selectionChange)="getAudienceArea2('region', wilayah_2.get('zone').value)">
+                  (selectionChange)="getAudienceArea2('region', wilayah_2.get('zone').value)" id="area2_zone">
                   <mat-option *ngFor="let item of list2['zone']" [value]="item.id">
                     {{item.name === 'all' ? 'Semua Zona' : item.name}}</mat-option>
                 </mat-select>
@@ -168,7 +169,7 @@
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light form-primary">
                 <mat-select placeholder="Regional" formControlName="region"
-                  (selectionChange)="getAudienceArea2('area', wilayah_2.get('region').value)">
+                  (selectionChange)="getAudienceArea2('area', wilayah_2.get('region').value)" id="area2_region">
                   <mat-option *ngFor="let item of list2['region']" [value]="item.id">
                     {{item.name === 'all' ? 'Semua Regional' : item.name}}</mat-option>
                 </mat-select>
@@ -179,7 +180,7 @@
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light form-primary">
                 <mat-select placeholder="Area" formControlName="area"
-                  (selectionChange)="getAudienceArea2('salespoint', wilayah_2.get('area').value)">
+                  (selectionChange)="getAudienceArea2('salespoint', wilayah_2.get('area').value)" id="area2_area">
                   <mat-option *ngFor="let item of list2['area']" [value]="item.id">
                     {{item.name === 'all' ? 'Semua Area' : item.name}}</mat-option>
                 </mat-select>
@@ -190,7 +191,8 @@
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light form-primary">
                 <mat-select placeholder="Salespoint" formControlName="salespoint"
-                  (selectionChange)="getAudienceArea2('district', wilayah_2.get('salespoint').value)">
+                  (selectionChange)="getAudienceArea2('district', wilayah_2.get('salespoint').value)"
+                  id="area2_salespoint">
                   <mat-option *ngFor="let item of list2['salespoint']" [value]="item.id">
                     {{item.name === 'all' ? 'Semua Salespoint' : item.name}}</mat-option>
                 </mat-select>
@@ -201,7 +203,8 @@
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light form-primary">
                 <mat-select placeholder="District" formControlName="district"
-                  (selectionChange)="getAudienceArea2('territory', wilayah_2.get('district').value)">
+                  (selectionChange)="getAudienceArea2('territory', wilayah_2.get('district').value)"
+                  id="area2_district">
                   <mat-option *ngFor="let item of list2['district']" [value]="item.id">
                     {{item.name === 'all' ? 'Semua District' : item.name}}</mat-option>
                 </mat-select>
@@ -211,7 +214,7 @@
                 </mat-error>
               </mat-form-field>
               <mat-form-field fxFlex="100" class="is-light form-primary">
-                <mat-select placeholder="Territory" formControlName="territory">
+                <mat-select placeholder="Territory" formControlName="territory" id="area2_territory">
                   <mat-option *ngFor="let item of list2['territory']" [value]="item.id">
                     {{item.name === 'all' ? 'Semua Territory' : item.name}}</mat-option>
                 </mat-select>
