fixing crash UI Bantuan

--- a/src/app/pages/settings/support/content/dialog/dialog-other-help.html
+++ b/src/app/pages/settings/support/content/dialog/dialog-other-help.html
@@ -1,6 +1,7 @@
 <div class="dialog-content-wrapper">
   <div mat-dialog-content class="p-24 m-0" fusePerfectScrollbar fxLayout="column" fxLayoutAlign="center center">
-    <img src="assets/images/ayo/AYO_SRC_(Master).png" class="image-icon" srcset="assets/images/ayo/AYO_SRC_(Master)@2x.png 2x" alt="Help Detail">
+    <img src="assets/images/ayo/AYO_SRC_(Master).png" class="image-icon"
+      srcset="assets/images/ayo/AYO_SRC_(Master)@2x.png 2x" alt="Help Detail">
     <span class="description">
       {{data.description}}
     </span>
